--- a/interface.ui
+++ b/interface.ui
@@ -122,6 +122,13 @@
           </property>
          </widget>
         </item>
+        <item row="6" column="1">
+         <widget class="QPushButton" name="nextBtn">
+          <property name="text">
+           <string>Продолжить</string>
+          </property>
+         </widget>
+        </item>
         <item row="3" column="3">
          <widget class="QLabel" name="warningTxt">
           <property name="text">
