--- a/interface.ui
+++ b/interface.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>882</width>
+    <width>1052</width>
     <height>852</height>
    </rect>
   </property>
@@ -133,10 +133,13 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="3">
+        <item row="3" column="3" rowspan="2">
          <widget class="QLabel" name="warningTxt">
+          <property name="styleSheet">
+           <string notr="true">color: rgb(204, 0, 0);</string>
+          </property>
           <property name="text">
-           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+           <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#cc0000;&quot;&gt;&lt;br/&gt;&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
           </property>
          </widget>
         </item>
@@ -161,7 +164,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>882</width>
+     <width>1052</width>
      <height>28</height>
     </rect>
    </property>
