--- a/interface.ui
+++ b/interface.ui
@@ -28,34 +28,6 @@
         <string>Оформление заказа</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout">
-        <item row="1" column="0" colspan="3">
-         <widget class="QTableWidget" name="tableWidget">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>60</height>
-           </size>
-          </property>
-          <property name="rowCount">
-           <number>1</number>
-          </property>
-          <property name="columnCount">
-           <number>5</number>
-          </property>
-          <row/>
-          <column/>
-          <column/>
-          <column/>
-          <column/>
-          <column/>
-         </widget>
-        </item>
         <item row="6" column="0">
          <widget class="QPushButton" name="loadBtn">
           <property name="text">
@@ -140,6 +112,41 @@
           </property>
           <property name="text">
            <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-weight:600; color:#cc0000;&quot;&gt;&lt;br/&gt;&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="4">
+         <widget class="QTableWidget" name="tableWidget">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>60</height>
+           </size>
+          </property>
+          <property name="rowCount">
+           <number>1</number>
+          </property>
+          <property name="columnCount">
+           <number>5</number>
+          </property>
+          <row/>
+          <column/>
+          <column/>
+          <column/>
+          <column/>
+          <column/>
+         </widget>
+        </item>
+        <item row="6" column="3">
+         <widget class="QPushButton" name="delBtn">
+          <property name="text">
+           <string>Удалить данные</string>
           </property>
          </widget>
         </item>
